# floorai

./: .gitignore  .tmp-agent-args.json  AGENTS.md  INTERVIEW_WALKTHROUGH.md  PLAN.md  README.md  THANK_YOU_DRAFT.md  convex.local.env  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.deepagents/skills/golden-dataset-evaluation/: SKILL.md
.deepagents/skills/retail-ops-response-quality/: SKILL.md
.deepagents/skills/source-driven-development/: SKILL.md
agents/: __init__.py
agents/retail_ops/: __init__.py  agent.py  config.py  data_loader.py  evaluate.py  tools.py
convex/: access.ts  actionItems.ts  agent.ts  answerPackets.ts  audit.ts  briefs.ts  eval.ts  evalRuns.ts  files.ts  inventory.ts  issues.ts  messages.ts  operations.ts  policies.ts  resolutions.ts  schema.ts  seed.ts  staffing.ts  stores.ts  users.ts
convex/_generated/: api.d.ts
data/: golden_dataset.json  policies.json  synthetic_issues.csv  synthetic_preferred_responses.json
scripts/: live-eval.mjs
slides/: presentation.html
src/app/: globals.css  layout.tsx  page.tsx
src/app/chat/: page.tsx
src/app/regional/: page.tsx
src/app/store/: page.tsx
src/components/: ActionItemsPanel.tsx  AttachmentList.tsx  ChatPanel.tsx  ConvexClientProvider.tsx  GroupChat.tsx  IssueCard.tsx  IssueComposer.tsx  OperatorSessionProvider.tsx  RecentActivityPanel.tsx  Sidebar.tsx
src/lib/: fileUploads.ts
video/: package-lock.json  package.json
video/src/: FloorAIDemo.tsx  Root.tsx
video/src/scenes/: Architecture.tsx  CallToAction.tsx  ProblemStatement.tsx  Results.tsx  Solution.tsx  (+1 more)
(+1 files in other folders)
