[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-ops-agent-evals"
version = "0.1.0"
description = "Deep Agents evaluation harness for the retail operations assistant."
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.5.2,<0.6",
  "langchain-google-genai>=4.2.1,<5",
  "python-dotenv>=1.1,<2",
  "pydantic>=2.11,<3",
]

[tool.setuptools.packages.find]
include = ["agents*"]
